[gd_scene load_steps=16 format=2]

[ext_resource path="res://Buttons/Red.png" type="Texture" id=1]
[ext_resource path="res://Buttons/Red_press.png" type="Texture" id=2]
[ext_resource path="res://Buttons/Green.png" type="Texture" id=3]
[ext_resource path="res://Buttons/Green_press.png" type="Texture" id=4]
[ext_resource path="res://Buttons/Blue.png" type="Texture" id=5]
[ext_resource path="res://Buttons/Blue_press.png" type="Texture" id=6]
[ext_resource path="res://Buttons/Yellow.png" type="Texture" id=7]
[ext_resource path="res://Buttons/Yellow_press.png" type="Texture" id=8]
[ext_resource path="res://Panel.png" type="Texture" id=9]
[ext_resource path="res://Root.gd" type="Script" id=10]
[ext_resource path="res://sfx/do.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/fa.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/re.wav" type="AudioStream" id=13]
[ext_resource path="res://sfx/mi.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/error.wav" type="AudioStream" id=15]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="TextureButton" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Blue" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Yellow" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="AIRed" type="TextureRect" parent="."]
visible = false
anchor_right = 0.5
anchor_bottom = 0.5
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AIGreen" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AIBlue" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AIYellow" type="TextureRect" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBg" type="ColorRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -80.0
margin_right = 50.0
margin_bottom = -40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/LabelBg"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -29.0
margin_right = 63.0
margin_bottom = 28.0
text = "START"

[node name="sfx" type="Node" parent="."]

[node name="Do" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 11 )

[node name="Re" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 13 )

[node name="Mi" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 14 )

[node name="Fa" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 12 )

[node name="error" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 15 )
[connection signal="button_up" from="Red" to="." method="_checkPlayerButton" binds= [ 0 ]]
[connection signal="button_up" from="Green" to="." method="_checkPlayerButton" binds= [ 1 ]]
[connection signal="button_up" from="Blue" to="." method="_checkPlayerButton" binds= [ 2 ]]
[connection signal="button_up" from="Yellow" to="." method="_checkPlayerButton" binds= [ 3 ]]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
